--- a/css/style.css
+++ b/css/style.css
@@ -390,3 +390,77 @@ padding-left: 1.6rem;
 .testomonial-author span{
     font-size: 1.2rem;
 }
+/* *********** */
+/* CONTACT SECTION */
+/* *********** */
+#contact{
+    padding: 10rem 0;
+}
+.cn-10{
+  padding: 0 2rem;
+}
+.contact-heading h2{
+    font-size: 2.6rem;
+    margin-bottom: 2rem;
+}
+.contact-left,
+.contact-right {
+  flex: 1;
+}
+.contact-heading{
+    padding: 0 2rem;
+}
+.form{
+    display: flex;
+    flex-wrap: wrap;
+}
+.contact-input{
+   flex:  0 0 50%;
+    padding: 0rem 2rem;
+}
+.contact-input-100{
+    flex:  0 0 100%;
+    padding: 0rem 2rem;
+}
+#contact input {
+    height: 5rem;
+    margin-bottom: 2rem;
+    padding: .5rem 1.2rem;
+}
+form .form-control{
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #dddddd;
+    font-size: 1.5rem;
+    font-weight: normal;
+    color: #555;
+    padding: 6px 12px;
+    box-shadow: none;
+    margin-bottom: 1.4rem;
+    outline: none;
+    transition: all 0.3s;
+}
+form .form-control:hover{
+   border-bottom: 1px solid #353535;
+}
+textarea{
+    padding: 0 1rem;
+    overflow: auto;
+    width: 460px;
+    height: 270px;
+    resize: vertical;
+    width: 100%;
+}
+.conatct-btn {
+    width: 100%;
+    border: none;
+    background-color: #ce3232;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1.4rem;
+    padding: 1.6rem 4rem;
+    transition: all 0.5s;
+}
+.conatct-btn:hover {
+    background-color: #292929;
+}
